--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -94,6 +94,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	  td,th{padding:6px}
       .formula{display:none}
       .main-sidebar{padding-bottom:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
@@ -209,9 +210,9 @@
           <div class="formula">
             <div style="border-radius:5px; background-color:#ccc;padding:10px; font-size:11px; font-weight:600;">
               <span style="font-size:11px"><b>Actual Burst Time ( ABT ) Formula:</b></span><br>
-              <div style='color: #555; margin-bottom:3px'>---------------------------------------------------------------------</div>
+              <div style='color: #555; margin-bottom:3px'>----------------------------------------------------------------------------------</div>
               <span style='color: Crimson'>Actual Burst Time</span> = ( <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> ) / <span style='color: #01A3DF'>Burst Limit</span><br>
-              <div style='color: #555'>---------------------------------------------------------------------</div>
+              <div style='color: #555'>----------------------------------------------------------------------------------</div>
               <div style="margin-top:5px; font-weight:normal">
                 <span style='color: #555; font-size:11px'>Burst Threshold = Max Limit * 3/4</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='text-align:right;color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
                 <span style='color: #555; font-size:11px'>Limit At = Max Limit * 1/2</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>
