--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -173,10 +173,10 @@
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:600; border-radius:5px">
                <span style="font-weight:bold">Actual Burst Time Duration:</span>
               <div style="clear:both; margin-top:5px">
-                <span style='color: Crimson'>ABT</span> = ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span> = <span id="for-up-burst-duration" style='color: Crimson'>6</span>s<br>
+                ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span> = <span id="for-up-burst-duration" style='color: Crimson'>6</span>s<br>
               </div>
               <div style='font-size:12px; font-weight:bold;margin-top:5px'>
-                <span style='color: green;' id="new-burst-up">512K</span> up to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> for <span id="for-up-burst-duration2" style='color: Crimson'>6</span> seconds<br>
+                <span style='color: green;' id="new-burst-up">512K</span> to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> for <span id="for-up-burst-duration2" style='color: Crimson'>6</span> seconds<br>
               </div>
             </div>
           </div>
@@ -199,17 +199,17 @@
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:600; border-radius:5px">
               <span style="font-weight:bold">Actual Burst Time Duration:</span>
               <div style="clear:both; margin-top:5px">
-                <span style='color: Crimson;'>ABT</span> = ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span> = <span id="for-down-burst-duration" style='color: Crimson'>6</span>s<br>
+                ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span> = <span id="for-down-burst-duration" style='color: Crimson'>6</span>s<br>
               </div>
               <div style='font-size:12px; font-weight:bold;margin-top:5px;'>
-                <span style='color:green;' id="new-burst-down">1M</span> up to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> for <span id="for-down-burst-duration2" style='color: Crimson'>6</span> seconds<br>
+                <span style='color:green;' id="new-burst-down">1M</span> to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> for <span id="for-down-burst-duration2" style='color: Crimson'>6</span> seconds<br>
               </div>
             </div>
           </div>
           <div style="clear:both"></div>
           <div class="formula">
             <div style="border-radius:5px; background-color:#ccc;padding:10px; font-size:11px; font-weight:600;">
-              <span style="font-size:11px"><b>Actual Burst Time ( ABT ) Formula:</b></span><br>
+              <span style="font-size:11px"><b>Actual Burst Time Formula:</b></span><br>
               <div style='color: #555; margin-bottom:3px'>----------------------------------------------------------------------------------</div>
               <span style='color: Crimson'>Actual Burst Time</span> = ( <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> ) / <span style='color: #01A3DF'>Burst Limit</span><br>
               <div style='color: #555'>----------------------------------------------------------------------------------</div>
