--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -160,11 +160,11 @@
             <label><b>Change Router Mac Address</b></label><br>
             <span style="display:flex">
             <input style="width:100%;margin-right:2px" type="text" id="input-mac-address" value="" placeholder="52:E2:4F:28:8B:9F">
-			<button style="width:120px" type="button" onclick="genMAC()">Random</button>
+			<button style="width:100px" type="button" onclick="genMAC()">Random</button>
             </span>
           </div>
         </div>
-        <div style="clear:both"></div>
+        <div style="margin-top:10px;clear:both"></div>
           <label><b>More Hidden Protections from Internet (WAN) Scanning</b></label><br>
           <div style="border-bottom:1px solid #bbb; margin-top:2px;  margin-bottom:5px"></div>
 		  <div class="row">
@@ -172,7 +172,7 @@
               <input type="checkbox" id="mikrotik-winbox" >
               <label for="mikrotik-winbox">Block Winbox Scan</label><br>
               <input type="checkbox" id="mikrotik-discovery" >
-              <label for="mikrotik-discovery">Block Neighbor Discovery</label><br>
+              <label for="mikrotik-discovery">Block Neighbor Disc.</label><br>
               <input type="checkbox" id="mikrotik-mac-server" >
               <label for="mikrotik-mac-server">Block Mac Server</label><br>
               <input type="checkbox" id="mikrotik-traceroute" >
