--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -140,8 +140,10 @@
         <h1><span style="color:#ff6600 !important">MIKROTIK NINJA</span>: HIDE ROUTERBOARD INFO FROM ISP / WAN SCANNING</h1>
       </div>
       <div class="sidebar">
+	  <div style="padding:10px">
         <span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
-        <div style="clear:both"></div>
+        </div>
+		<div style="clear:both"></div>
         <img style="margin-top:10px; margin-bottom:10px" src="./img/hide-info.png" alt="Italian Trulli">
         <div class="class-input">
           <div style="width:100%;margin-right:10px">
