--- a/pcc.html
+++ b/pcc.html
@@ -63,7 +63,7 @@
       .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
-      h1{font-size:21px;text-align:center}
+      h1{font-size:21px;text-align:left}
       .mymenu{width:100%!important}
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
