--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
           </div>
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:0px; color:#777; font-size:11px">
-          Project and design by Agus Ramadhani <a style="text-decoration:underline; font-weight:normal" target="_blank" href="https://www.o-om.com/">www.o-om.com</a> PangkalanBun Kalteng 74112, INDONESIA</a>
+          Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
         </div>	 		  
         </div>
       </div>
