--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -181,8 +181,8 @@
         </div>
         <br>
         <button style="margin-bottom:25px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
-        <span style="margin-top:20px; text-align:center;font-weight:normal !important">
-        PCC Load Balancing Is Not Like The Mathematical Formula, like <span style="color:red">20+10 = 30</span> <br>But Like <br> <span style="color:green">20+10 = 20+10</span> <br>Or Like<br> <span style="color:green">20+10 = 10+10+10</span>
+        <span style="margin-top:20px; text-align:center;font-weight:700; font-size:13px">
+        Remember! PCC Load Balancing is not like a mathematical formula, not like  <span style="color:red;">20+10=30</span>, but like this <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
         </span>
       </div>
       <div class="content">
