--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -75,7 +75,7 @@
       @media screen and (max-width:700px) {
 	  .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%; padding:10px}
-      .sidebar{height:200px;margin-bottom:5px}
+      .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
 	  .header {border:none}	  
       .logo-left a{margin-top:10px!important;font-size:23px}
@@ -168,7 +168,7 @@
           </select>
         </div>
         <br>
-        <div style="float:left; width:100%;margin-bottom:15px">
+        <div style="float:left; width:100%;margin-bottom:10px">
           <label><b>WAN-2 Speed</b></label><br>
           <select id="wan-list2">
             <option value="10">10 Mbps</option>
@@ -180,9 +180,9 @@
           </select>
         </div>
         <br>
-        <button style="margin-bottom:25px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
+        <button style="margin-bottom:10px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
         <span style="margin-top:20px; text-align:center;font-weight:700; font-size:13px">
-        Remember! PCC Load Balancing is not like a mathematical formula, not like  <span style="color:red;">20+10=30</span>, but like this <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
+        Remember! PCC Load Balancing is not like a mathematical formula, not like this <span style="color:red;">20+10=30</span>, but like <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
         </span>
       </div>
       <div class="content">
@@ -218,7 +218,7 @@
             </tbody>
           </table>
           <br>
-          <table id="mytable" style="font-weight:600">
+          <table id="mytable" style="font-weight:700">
             <thead>
               <tr style="background-color: #eee; font-weight:600" >
                 <td>Marking Connection</td>
