--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -182,7 +182,7 @@
         <br>
         <button style="margin-bottom:10px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
         <span style="margin-top:20px; text-align:center;font-weight:700; font-size:13px">
-        Remember! PCC Load Balancing is not like a mathematical formula, not like this <span style="color:red;">20+10=30</span>, but like <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
+Do you know, PCC Load Balancing is not like a mathematical formula, not like this <span style="color:red;">20+10=30</span>, but like <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
         </span>
       </div>
       <div class="content">
