--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -180,10 +180,10 @@
           </select>
         </div>
         <br>
-        <button style="margin-bottom:10px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
-        <span style="margin-top:20px; text-align:center;font-weight:700; font-size:13px">
-Do you know, PCC Load Balancing is not like a mathematical formula, not like this <span style="color:red;">20+10=30</span>, but like <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
-        </span>
+        <button style="margin-bottom:15px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
+        <div style="font-size:13px; border:1px solid orange; background-color:#F5D76E; padding:8px;font-weight:bold; border-radius:5px">
+PCC Load Balancing is not like a mathematical formula, not like <span style="color:red;">20+10=30</span>, but like this <span style="color:green">20+10=20+10</span> or like this <span style="color:green">20+10=10+10+10</span>
+        </div>
       </div>
       <div class="content">
         <span style="margin-left:2px"><b>LB PCC CALCULATION RESULT</b></span>
