--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -33,17 +33,17 @@
       html,body{color:#292929;height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;color:#333}
       *{box-sizing:border-box}
       h2{color:#f60}
-      .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
+      .logo{margin-top:0px; color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:800px;margin:0 auto;padding:0 5px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:right;width:100%;padding:10px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
       .sidebar{float:left;width:100%;padding:20px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 5px 5px}
       .sidebar img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:5px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html"><img alt="buananetpbun" style="float:left; margin-top:0px;margin-right:5px" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
+                    <a href="https://buananetpbun.github.io/pcc.html"><img alt="buananetpbun" style="float:left; margin-top:0px;margin-right:5px" width="41" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>    
         </div>
       </div>
       <div style="clear:both"></div>
